==> TomiXRM/LEGEND_RCJ/RoboCup-LEGEND2021/program/mouse/src/mouse.cpp <==
#include "mbed.h"
#define REG_Product_ID                           0x00
#define REG_Revision_ID                          0x01
#define REG_Motion                               0x02
#define REG_Delta_X_L                            0x03
#define REG_Delta_X_H                            0x04
#define REG_Delta_Y_L                            0x05
#define REG_Delta_Y_H                            0x06
#define REG_SQUAL                                0x07
#define REG_Pixel_Sum                            0x08
#define REG_Maximum_Pixel                        0x09
#define REG_Minimum_Pixel                        0x0a
#define REG_Shutter_Lower                        0x0b
#define REG_Shutter_Upper                        0x0c
#define REG_Frame_Period_Lower                   0x0d
#define REG_Frame_Period_Upper                   0x0e
#define REG_Configuration_I                      0x0f
#define REG_Configuration_II                     0x10
#define REG_Frame_Capture                        0x12
#define REG_SROM_Enable                          0x13
#define REG_Run_Downshift                        0x14
#define REG_Rest1_Rate                           0x15
#define REG_Rest1_Downshift                      0x16
#define REG_Rest2_Rate                           0x17
#define REG_Rest2_Downshift                      0x18
#define REG_Rest3_Rate                           0x19
#define REG_Frame_Period_Max_Bound_Lower         0x1a
#define REG_Frame_Period_Max_Bound_Upper         0x1b

char adns_read_reg(char reg_addr) {
        adns_com_begin();

        // send adress of the register, with MSBit = 0 to indicate it's a read
        spi.write(reg_addr & 0x7f );
        wait_us(100); // tSRAD
        // read data
        char data = spi.write(0);
        wait_us(1); // tSCLK-NCS for read operation is 120ns

        adns_com_end();
        wait_us(19); //  tSRW/tSRR (=20us) minus tSCLK-NCS

        return data;
}

char adns_write_reg(char reg_addr, char data) {
        adns_com_begin();

        //send adress of the register, with MSBit = 1 to indicate it's a write
        spi.write(reg_addr | 0x80 );
        //sent data
        spi.write(data);
        wait_us(20); // tSCLK-NCS for write operation

        adns_com_end();
        wait_us(100); // tSWW/tSWR (=120us) minus tSCLK-NCS. Could be shortened, but is looks like a safe lower bound
}

void performStartup(void) {
        adns_com_end(); // ensure that the serial port is reset
        adns_com_begin(); // ensure that the serial port is reset
        adns_com_end(); // ensure that the serial port is reset
        adns_write_reg(REG_Power_Up_Reset, 0x5a); // force reset
        wait_ms(50); // wait for it to reboot
        // read registers 0x02 to 0x06 (and discard the data)
        adns_read_reg(REG_Motion);
        adns_read_reg(REG_Delta_X_L);
        adns_read_reg(REG_Delta_X_H);
        adns_read_reg(REG_Delta_Y_L);
        adns_read_reg(REG_Delta_Y_H);
        // upload the firmwareするときはコメントアウトを解除
        // adns_upload_firmware();
        wait_ms(10);
        /*enable laser(bit 0 = 0b), in normal mode (bits 3,2,1 = 000b)
           reading the actual value of the register is important because the real
           default value is different from what is said in the datasheet, and if you
           change the reserved chars (like by writing 0x00...) it would not work.*/
        char laser_ctrl0 = adns_read_reg(REG_LASER_CTRL0);
        adns_write_reg(REG_LASER_CTRL0, laser_ctrl0 & 0xf0 );

        wait_ms(1);
}
